--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -9,7 +9,7 @@
               <div class="panel-body">
                 <button ng-click="addSellingPoint()" class="btn-dashboard">Add Sales Channel</button>
                 <button ng-click="editSellingPoint()" class="btn-dashboard">Edit Sales Channel</button>
-                <button ng-click="viewBlocks()" class="btn-dashboard">View Blocks</button>
+                <button ng-click="viewBlocks()" class="btn-dashboard">View Inventory in Sales</button>
 
 
               </div>
@@ -56,12 +56,10 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-            <div class="col-lg-9">
+            <div class="col-lg-8 col-lg-offset-2">
                 <label>Name</label>
                 <input class="form-control" ng-model="name" placeholder="Name of sales channel...">
                 <small class="text-muted">Maximum 30 characters.</small>
-                </div>
-                <div class="col-lg-3">
                 <br>
                 <div class="checkbox">
     	            <label><input type="checkbox" ng-model="isEcommerceStage">Sell on e-commerce</label>
@@ -84,20 +82,21 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-                <label>Name</label>
+            <div class ="col-lg-8 col-lg-offset-2">
+                <label>New Selling Point Name</label>
                 <input class="form-control" ng-model="sellingPoint.name" placeholder="Name of sales channel...">
                 <small class="text-muted">Maximum 30 characters.</small>
 
                 <div class="checkbox">
     	            <label><input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
                 </div>
-
+                </div>
             </fieldset>
         </form>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="ok()">Save</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        <button class="btn btn-dashboard-green" type="button" ng-click="ok()">Save</button>
+        <button class="btn btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
     </div>
 </script>
 
