--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -5,14 +5,18 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
+            <div class="col-lg-8 col-lg-offset-2">
                 <label>Name of Supply Chain Stage</label>
                 <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
                 <small class="text-muted">Maximum 30 characters.</small>
+                </div>
             </fieldset>
             <fieldset class="form-group">
+            <div class="col-lg-8 col-lg-offset-2">
                 <label>Previous Stage</label>
                 <select ng-model="prev" ng-options="stage as stage.name for stage in stages" class="form-control">
                 </select>
+                </div>
             </fieldset>
         </form>
     </div>
@@ -68,9 +72,9 @@
                             <div class="panel-body">
                                 <button ng-click="addStage()" class="btn-dashboard">Add</button>
                                 <button ng-click="editStage()" class="btn-dashboard">Edit</button>
-                                <button class="btn-dashboard">Delete</button>
-                                <button class="btn-dashboard">Link</button>
-                                <button class="btn-dashboard">Unlink</button>
+                                <button class="btn-dashboard-red">Delete</button>
+                              <!--  <button class="btn-dashboard">Link</button>
+                                <button class="btn-dashboard">Unlink</button>-->
                                 <button ng-click="saveSupplyChain()" class="btn-dashboard-green">Save</button>
                             </div>
                         </div>
