--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -80,7 +80,6 @@
       </fieldset>
 
       <fieldset class="form-group">
-
         <div class ="col-lg-6">
               <label>Units</label><br>
               <select ng-model="unit" name="mydropdown" class="dropdown">
@@ -112,8 +111,9 @@
 
         <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
             ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
-            ngf-resize="{width: 100, height: 100}">Select
+            ngf-resize="{width: 100, height: 100}">
         </div>
+        </fieldset>
 
       <fieldset class="form-group">
       <div class ="col-lg-12">
