--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -1,5 +1,5 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <h2 class="page-header light-text">Home</h2>
+<div class="col-lg-12">
+  <h2 class="page-header light-text text-center"></h2>
   <div class="row placeholders">
       <!--
         <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
@@ -12,7 +12,9 @@
                   <h3>Help Page</h3>
                   <hr class = "short">
                 </div>
-                <div>Put something here</div>
+                <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/O9T-e-iIA1Y" frameborder="0" allowfullscreen></iframe>
+                </div>
 
             </div>
           </div>
