--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -13,13 +13,14 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
-                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/products">Products</a></li>
-                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/supply-chain/supply-chain.menu">Supply Chain</a></li>
-                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/inventory/menu">Inventory</a></li>
-                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/sales-management/menu">Sales Channels</a></li>
-                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/orders">Orders</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li class="hide"><a ui-sref=".supply-chain.menu">Products</a></li>
+                    <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
+                    <li class="hide"><a ui-sref=".supply-chain.menu">Inventory</a></li>
+                    <li class="hide"><a ui-sref=".supply-chain.menu">Sales Channels</a></li>
+                    <li class="hide"><a ui-sref=".supply-chain.menu">Orders</a></li>
+                    <li><a ui-sref=".default.products">Home</a></li>
+                    <li><a ui-sref=".settings">Settings</a></li>
+                    <li><a ui-sref=".help">Help</a></li>
                     <li><a ng-click="logout()" href="#">Logout</a></li>
                 </ul>
             </div>
