--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -140,6 +140,7 @@ body {
   font-size: 20px;
   font-weight: 500;
 }
+
 .navbar-collapse .nav li {
   margin: 10px 5px;
   @include border-radius(2px);
@@ -503,4 +504,9 @@ select {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}
+
+img.instructionImg {
+  max-width: 100%;
+  border-radius: 5px;
 }
