--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -159,7 +159,7 @@
 
 <script type="text/ng-template" id="deleteProductModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Delete Block</h3>
+    <h3 class="modal-title">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this product?</p>
