--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -94,6 +94,20 @@
 </script>
 
 
+<script type="text/ng-template" id="deleteStageModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Delete Stage</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this stage?</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
+
+
 
 <script type="text/ng-template" id="exitSupplyChain.html">
     <div class="modal-header">
@@ -120,7 +134,7 @@
                         <div class="panel-body">
                             <button ng-click="addStage()" class="btn-dashboard">Add</button>
                             <button ng-click="editStage()" class="btn-dashboard">Edit</button>
-                            <button class="btn-dashboard-red">Delete</button>
+                            <button ng-click="deleteStage()" class="btn-dashboard-red">Delete</button>
                             <button ng-click="linkStages()" class="btn-dashboard">Link</button>
                             <button ng-click="unlinkStages()" class="btn-dashboard">Unlink</button>
                             <button ng-click="saveSupplyChain()" class="btn-dashboard-green">Save</button>
