View block history

--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -32,7 +32,7 @@
                                                 <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
                                                 <td>
                                                   <button ng-click="editSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button>
-                                                  <button ng-click="deleteSupplyChain(supplyChain)" class="btn-dashboard-red">Delete</button>
+                                                  <!-- <button ng-click="deleteSupplyChain(supplyChain)" class="btn-dashboard-red">Delete</button> -->
                                                 </td>
                                             </tr>
                                         </tbody>
