Add basic block details

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -352,6 +352,14 @@
         <h3 class="modal-title">Inventory Batch Details</h3>
     </div>
     <div class="modal-body">
+
+        <div class="panel-body">
+
+        <p>Product Type: {{block.productType.name}}</p>
+        <p>Quantity: {{block.quantity + " " + block.units}}</p>
+
+        </div>
+
         <div class="panel-body">
             <div class="table-responsive">
                 <table class="table table-striped">
