--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -8,16 +8,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" ng-model="fisheryName" href="#">{{fisheryName}}</a>
+                <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.products">{{fisheryName}}</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
                     <li class="hide"><a ui-sref=".default.products">Products</a></li>
                     <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
-                    <li class="hide"><a ui-sref=".default-inventory.menu">Inventory</a></li>
-                    <li class="hide"><a ui-sref=".default-sales-management.menu">Sales Channels</a></li>
-                    <li class="hide"><a ui-sref=".default-orders">Orders</a></li>
+                    <li class="hide"><a ui-sref=".default.sales-management.menu">Sales Channels</a></li>
+                    <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
+                    <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
                     <li><a ui-sref=".default.products">Home</a></li>
                     <!--REMOVE UNTIL SETTINGS FEATURES IMPLEMENTED
                     <li><a ui-sref=".settings">Settings</a></li>-->
