--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -14,7 +14,7 @@
             </div>
             <div class="row">
               <div class="col-lg-6" align="left">
-                <h3>Creating a supply Chain</h3>
+                <h3>Creating a Supply Chain</h3>
                 <h4>1. Click the <i>Supply Chain</i> tab</h4>
                 <h4>2. Click the <i>Create Supply Chain</i> button and give it a name</h4>
                 <h4>3. Click the <i>Add</i> button to add the first intermediary in your supply chain</h4>
@@ -27,8 +27,8 @@
                 <img class="instructionImg" src="../img/create-chain.png"></img>
               </div>
             </div>
+            <hr class="short">
             <div class="row">
-              <br>
               <div class="col-lg-6" align="left">
                 <h3>Adding a Prodct</h3>
                 <h4>1. Click the <i>Products</i> tab</h4>
@@ -39,9 +39,8 @@
                 <img class="instructionImg" src="../img/add-product.png"></img>
               </div>
             </div>
-
+            <hr class="short">
             <div class="row">
-              <br>
               <div class="col-lg-6" align="left">
                 <h3>Adding an Inventory Batch</h3>
                 <h4>1. Click the <i>Inventory</i> tab</h4>
@@ -56,17 +55,17 @@
               </div>
             </div>
 
+            <hr class="short">
             <div class="row">
-              <br>
               <div class="col-lg-6" align="left">
                 <h3>Moving Your Inventory</h4>
                   <h4>1. Click the <i>Inventory</i> tab</h4>
                   <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
-                  <h4>3. From the visual supply chain, click the source intermediary</h4>
+                  <h4>3. From the visual supply chain, click the intermediary that inventory is being moved from</h4>
                   <h4>4. Once the destination is highlighted, click <i>View/Edit Inventory</i></h4>
-                  <h4>5. Choose desired inventory batch</h4>
+                  <h4>5. Click the inventory batch you wish to move</h4>
                   <h4>6. Click the <i>Move</i> button</h4>
-                  <h4>7. From the <i>Move to Stage</i> dropdown, click target intermediary</h4>
+                  <h4>7. From the <i>Move to Stage</i> dropdown, choose the intermediary that inventory is being moved to</h4>
                   <h4>5. Click the <i>OK</i> button</h4>
               </div>
               <div class="col-lg-6">
@@ -74,8 +73,8 @@
               </div>
             </div>
 
+            <hr class="short">
             <div class="row">
-              <br>
               <div class="col-lg-6" align="left">
                 <h3>Creating a Selling Point</h3>
                 <h4>1. Click the <i>Sales Channels</i> tab</h4>
@@ -90,8 +89,8 @@
               </div>
             </div>
 
+            <hr class="short">
             <div class="row">
-              <br>
               <div class="col-lg-6" align="left">
                 <h3>Traceability from Catch to Consumer</h3>
                 <h4>1. Click the <i>Inventory</i> tab</h4>
@@ -104,7 +103,6 @@
               </div>
               <div class="col-lg-6">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/O9T-e-iIA1Y" frameborder="0" allowfullscreen></iframe>
-
               </div>
             </div>
 
