--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -15,11 +15,11 @@
             <div class="row">
               <div class="col-lg-6" align="left">
                 <h3>Creating a Supply Chain</h3>
-                <h4>1. Click the <i>Supply Chain</i> tab</h4>
+                <h4>1. Click the <i>Supply Chain</i> tab</h4>
                 <h4>2. Click the <i>Create Supply Chain</i> button and give it a name</h4>
                 <h4>3. Click the <i>Add</i> button to add the first intermediary in your supply chain</h4>
                 <h4>4. Name your first intermediary, and press the green <i>OK</i> button</h4>
-                <h4>5. Repeat steps (3) and (4), and choose the source intermediary from the <i>
+                <h4>5. Repeat steps (3) and (4), and connect intermediaries by using the <i>
                   Previous Stage</i> Dropdown</h4>
                 <h4>6. Click <i>Save</i></h4>
               </div>
@@ -30,7 +30,7 @@
             <hr class="short">
             <div class="row">
               <div class="col-lg-6" align="left">
-                <h3>Adding a Prodct</h3>
+                <h3>Adding a Product</h3>
                 <h4>1. Click the <i>Products</i> tab</h4>
                 <h4>2. Click the <i>Add Product</i> button</h4>
                 <h4>3. Fill out the info & Click <i>Submit</i></h4>
