Edit products finalized and compliancy String fields added

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -236,15 +236,15 @@
                     </select>
                     <small class="text-muted">Please choose between the three options.</small>
                 </div>
-                <div class="col-lg-6">
+                <!--<div class="col-lg-6">
                     <label>Catch Date</label>
                     <input class="form-control" ng-model="catchDate" placeholder="ex. 5/14/2016">
                     <small class="text-muted">MM/DD/YYYY</small>
-                </div>
+                </div>-->
             </fieldset>
 
 
-            <fieldset class="form-group">
+            <!--<fieldset class="form-group">
                 <div class="col-lg-6">
                     <label>Catch Region</label>
                     <input class="form-control" ng-model="catchRegion" placeholder="ex. 48°N, 61.5°W, Gulf of St. Lawrence">
@@ -268,7 +268,7 @@
                     <input class="form-control" ng-model="waterDepth" placeholder="ex. 500m">
                     <small class="text-muted">Enter the water depth.</small>
                 </div>
-            </fieldset>
+            </fieldset>-->
         </form>
 
     </div>
