--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -106,7 +106,7 @@
         <div class ="col-lg-6">
             <label>Attach Product Photo</label>
             <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-            <small class="text-muted">Attach a picture</small>
+            <small class="text-muted">PNG and JPG files ONLY!</small>
         </div>
 
         <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
@@ -133,6 +133,84 @@
   </div>
   </div>
 </script>
+
+<script type="text/ng-template" id="editProductModal.html">
+
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Edit "{{name}}"</h3>
+  </div>
+  <div class ="col-lg-12">
+  <div class="modal-body">
+    <form>
+      <fieldset class="form-group">
+      <div class ="col-lg-6">
+        <label>Product Name</label>
+        <input class="form-control" ng-model="name" placeholder="ex. Atlantic Cod">
+        <small class="text-muted">Maximum 20 characters.</small>
+      </div>
+      <div class ="col-lg-6">
+        <label>Unit Price</label>
+        <input class="form-control" ng-model="unitPrice" placeholder="ex. 4.50">
+        <small class="text-muted">Maximum 3 characters</small>
+      </div>
+      </fieldset>
+
+      <fieldset class="form-group">
+        <div class ="col-lg-6">
+              <label>Units</label><br>
+              <select ng-model="unit" name="mydropdown" class="dropdown">
+                <option value="lb">Pounds (Lbs.)</option>
+                <option value="kg">Kilograms (Kgs.)</option>
+                <option value="unit">Per Unit of Fish</option>
+              </select>
+        </div>
+        <!--<div class ="col-lg-3">
+              <label>Availability</label><br>
+              <select ng-model="availability" name="mydropdown" class="dropdown">
+                <option value="None">None</option>
+                <option value="Low">Low: 20-150lbs</option>
+                <option value="Medium">Medium: 151-600lbs</option>
+                <option value="High">High: 600lbs+</option>
+              </select>
+            </div>-->
+        <!--<div class ="col-lg-6">
+            <label>Attach Product Photo</label>
+            <input class="form-control" type="file" ng-file-model="photo" size ="chars">
+            <small class="text-muted">Attach a picture</small>
+        </div>-->
+
+        <div class ="col-lg-6">
+            <label>Attach Product Photo</label>
+            <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+            <small class="text-muted">PNG and JPG files ONLY!</small>
+        </div>
+
+        <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
+            ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
+            ngf-resize="{width: 100, height: 100}">
+        </div>
+        </fieldset>
+
+      <fieldset class="form-group">
+      <div class ="col-lg-12">
+        <label>Description</label>
+        <input class="form-control" ng-model="description" placeholder="Enter a short product description">
+        <small class="text-muted">Maximum 100 characters</small>
+      </div>
+      </fieldset>
+    </form>
+   </div>
+   </div>
+
+  <div class="modal-footer">
+  <div class="alignright">
+  <button type="submit" class="btn-dashboard-green" ng-click="ok()">Submit</button>
+  <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+  </div>
+</script>
+
+
 <script type="text/ng-template" id="editModalContent.html">
   <div class="modal-header">
     <h3 class="modal-title">Add a Stage</h3>
