--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -67,7 +67,7 @@
 
 <script type="text/ng-template" id="viewBlocksModal.html">
     <div class="modal-header">
-        <h3 class="modal-title">Inventory in {{fromStage.name}}</h3>
+        <h3 class="modal-title">Inventory in {{stageName}}</h3>
     </div>
 
     <div class="modal-footer">
