Add compliance details to the Batch Detail Modal

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -357,6 +357,11 @@
 
         <p>Product Type: {{block.productType.name}}</p>
         <p>Quantity: {{block.quantity + " " + block.units}}</p>
+        <p>Catch Date: {{block.catchDate}} </p>
+        <p>Catch Region: {{block.catchRegion}} </p>
+        <p>Caught By: {{block.caughtBy}} </p>
+        <p>Catch Type: {{block.catchType}} </p>
+        <p>Water Depth: {{block.waterDepth}} </p>
 
         </div>
 
