--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -78,10 +78,9 @@
               <div class="col-lg-6" align="left">
                 <h3>Creating a Selling Point</h3>
                 <h4>1. Click the <i>Sales Channels</i> tab</h4>
-                <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
-                <h4>3. Click <i>Add Sales Channel</i></h4>
-                <h4>4. Enter your desired Selling Point Name</h4>
-                <h4>[OPTIONAL]: Check <i>Sell on e-commerce</i> to upload product to Coastline Market Shop</h4>
+                <h4>2. Click <i>Add Sales Channel</i></h4>
+                <h4>3. Enter your desired Selling Point Name</h4>
+                <h4>4. Check <i>Sell on e-commerce</i> to upload product to Coastline Market Shop</h4>
                 <h4>5. Click the <i>Ok</i> button</h4>
               </div>
               <div class="col-lg-6">
