--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -130,7 +130,7 @@
 
 <script type="text/ng-template" id="viewSellingPointBlocksModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Blocks</h3>
+    <h3 class="modal-title">Inventory in Selling Point</h3>
   </div>
 
 
