--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -13,7 +13,7 @@
                 <button ng-click="editProduct()" class="btn-dashboard">Edit</button>
                 <!--TODO-->
                 <button ng-click= "deleteProduct(product._id)"class="btn-dashboard-red">Delete</button>
-                <input type="text" name="search" placeholder="Search for an item" class="search">
+                <!--DELETE FOR DEMO <input type="text" name="search" placeholder="Search for an item" class="search">-->
               </div>
             </div>
             <div class="panel panel-default">
