--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -9,10 +9,10 @@
 
             <div class="panel panel-default">
               <div class="panel-body alignleft">
+                <!-- DELETE FOR DEMO
                 <button ng-click="addStage()" class="btn-dashboard">Print Invoice</button>
                 <button ng-click="editStage()" class="btn-dashboard">Edit Order</button>
                 <button class="btn-dashboard">View Details</button>
-                <!--
                 <button class="btn-dashboard"><i class = "fa fa-filter"></i></button>
                 <input type="text" name="search" placeholder="Search for an item" class="search">
                 -->
