--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -151,7 +151,7 @@
                             <button ng-click="deleteStage()" class="btn-dashboard-red">Delete</button>
                             <button ng-click="linkStages()" class="btn-dashboard">Link</button>
                             <button ng-click="unlinkStages()" class="btn-dashboard">Unlink</button>
-                            <!-- <button ng-click="saveSupplyChain()" class="btn-dashboard-green">Save</button> -->
+                            <button ng-click="saveSupplyChain()" class="btn-dashboard-green">Save</button>
                         </div>
                     </div>
                     <div class="panel panel-default">
