--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -27,6 +27,7 @@
                 <img class="instructionImg" src="../img/create-chain.png"></img>
               </div>
             </div>
+            <hr class="short">
             <div class="row">
               <br>
               <div class="col-lg-6" align="left">
@@ -39,6 +40,7 @@
                 <img class="instructionImg" src="../img/add-product.png"></img>
               </div>
             </div>
+            <hr class="short">
 
             <div class="row">
               <br>
@@ -55,6 +57,7 @@
                 <img class="instructionImg" src="../img/add-batch.png"></img>
               </div>
             </div>
+            <hr class="short">
 
             <div class="row">
               <br>
@@ -74,6 +77,7 @@ is being moved to</h4>
                 <img class="instructionImg" src="../img/move-batch.png"></img>
               </div>
             </div>
+            <hr class="short">
 
             <div class="row">
               <br>
@@ -89,6 +93,7 @@ is being moved to</h4>
                 <img class="instructionImg" src="../img/sell-point.png"></img>
               </div>
             </div>
+            <hr class="short">
 
             <div class="row">
               <br>
