--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -6,18 +6,18 @@
       <!--<div class="col-lg-8">-->
         <div class="container">
           <div class="panel-container">
-
+<!-- DELETE FOR DEMO
             <div class="panel panel-default">
               <div class="panel-body alignleft">
-                <!-- DELETE FOR DEMO
+
                 <button ng-click="addStage()" class="btn-dashboard">Print Invoice</button>
                 <button ng-click="editStage()" class="btn-dashboard">Edit Order</button>
                 <button class="btn-dashboard">View Details</button>
                 <button class="btn-dashboard"><i class = "fa fa-filter"></i></button>
                 <input type="text" name="search" placeholder="Search for an item" class="search">
-                -->
+
               </div>
-            </div>
+            </div>  -->
             <div class="panel panel-body">
               <!--
               <div class="panel-scroll">-->
