--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -15,9 +15,9 @@
                     <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
                     <li class="hide"><a ui-sref=".default.products">Products</a></li>
                     <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
-                    <li class="hide"><a ui-sref=".default-inventory.menu">Inventory</a></li>
-                    <li class="hide"><a ui-sref=".default-sales-management.menu">Sales Channels</a></li>
-                    <li class="hide"><a ui-sref=".default-orders">Orders</a></li>
+                    <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
+                    <li class="hide"><a ui-sref=".default.sales-management.menu">Sales Channel</a></li>
+                    <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
                     <li><a ui-sref=".default.products">Home</a></li>
                     <!--REMOVE UNTIL SETTINGS FEATURES IMPLEMENTED
                     <li><a ui-sref=".settings">Settings</a></li>-->
