--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -9,7 +9,9 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="panel-heading">
-              <h1>Coastline Quick Start Guide</h1>
+              <h1>Coastline Quick Start Guide</h1><br>
+               <a class="btn-dashboard-green" href="../img/coastline-guide.pdf">PDF Version</a>
+</h1>
               <hr class="short">
             </div>
             <div class="row">
