--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -219,7 +219,7 @@
     <form>
       <fieldset class="form-group">
         <label>New Name</label>
-        <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
+        <input class="form-control" ng-model="name" placeholder="i.e. Joe's Processor">
         <small class="text-muted">Maximum 30 characters.</small>
       </fieldset>
       <fieldset class="form-group">
