Order detail enhancements and fixes

--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -70,7 +70,6 @@
         <h4><b>Name:</b> {{order.firstName}} {{order.lastName}}</h4>
         <h4><b>Phone:</b> {{order.phone}}</h4>
         <h4><b>Order Time:</b> {{order.date | date: 'hh:mm a'}}</h4>
-
     </div>
 
     <div class="panel panel-default">
@@ -93,8 +92,8 @@
               <tr>
                 <!--<td>{{$index + 1}}</td>-->
                 <td>{{item.product.name}}</td>
-                <td>{{item.product.name}}</td>
                 <td>${{item.product.unitPrice}} / {{item.product.unit}}</td>
+                <td>{{item.quantity}} {{item.product.unit}}</td>
                 <td>{{item.product.unitPrice * item.quantity}}</td>
               </tr>
             </tbody>
